--- a/notebooks/01_sample_analysis.ipynb
+++ b/notebooks/01_sample_analysis.ipynb
@@ -1,1 +1,258 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "32715658-6c02-46d4-8303-b383e1e8101b",
+   "metadata": {},
+   "source": [
+    "### Machine Learning for Building Energy Consumption Prediction and Comparison  \n",
+    "**Author:** Olivia Solomon  \n",
+    "\n",
+    "This notebook walks through the full workflow used for this capstone project:\n",
+    "\n",
+    "1. Load and preprocess the dataset  \n",
+    "2. Train the LightGBM models (log-meter + log-intensity ensemble)  \n",
+    "3. Generate predictions for 2017  \n",
+    "4. Compute evaluation metrics  \n",
+    "5. Produce key figures seen in the corresponding final report  \n",
+    "\n",
+    "All scripts called here are fully automated and located in the `src/` directory of the [GitHub](https://github.com/oliviasolomon/ml-energy-forecasting-capstone).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d89102ec-07e6-4657-8ce0-cb50017cb71b",
+   "metadata": {},
+   "source": [
+    "## 1. Environment & Imports\n",
+    "\n",
+    "The following cell loads standard Python libraries and enables autoreload so the notebook updates automatically when local `.py` files change."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e960f2d4-dfc5-432a-a19b-909275ba5590",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from src import data_preprocessing\n",
+    "from src import train_and_predict\n",
+    "from src import evaluation\n",
+    "\n",
+    "from IPython.display import Image\n",
+    "\n",
+    "BASE_DIR = Path.home()  # change to correct directory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ed3087f-ca34-47fb-bf9b-363d2cfcab9b",
+   "metadata": {},
+   "source": [
+    "## 2. Preprocess the Raw Data\n",
+    "\n",
+    "This step:\n",
+    "- Loads `ml_capstone_data.xlsx`  \n",
+    "- Melts the electricity data into long format  \n",
+    "- Merges metadata + weather  \n",
+    "- Removes invalid meter readings  \n",
+    "- Outputs `data/electricity_long_2017.parquet` for modeling  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa4457c4-9c90-4cfb-9df9-d250bfd33463",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_preprocessing.preprocess()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9f1f198-35e5-4b5a-82ed-cc7239381ba9",
+   "metadata": {},
+   "source": [
+    "## 3. Train LightGBM Models\n",
+    "\n",
+    "This command:\n",
+    "- Trains log(meter) and log(meter_per_sqft) models  \n",
+    "- Uses 2016 data for training  \n",
+    "- Uses the final 30 days of 2016 for early stopping  \n",
+    "- Saves model files into `models/`  \n",
+    "- Produces 2017 predictions saved as:  \n",
+    "  `outputs/electricity_2017_predictions_long.csv`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d3ccbe4-4754-43c0-b650-7f054b5dd895",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_and_predict.main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "807dd38f-9114-4f9d-ad28-8f416129d3a8",
+   "metadata": {},
+   "source": [
+    "## 4. Load Predictions and Inspect Data\n",
+    "Loads:\n",
+    "- Processed parquet file (actual 2016–2017)  \n",
+    "- 2017 predictions from the model  \n",
+    "Then examine the shape, preview rows, and check available building types."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e7eafdc-e4f9-4112-908e-f3ff51418f88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_actual = pd.read_parquet(\"data/electricity_long_2017.parquet\")\n",
+    "df_pred = pd.read_csv(\"outputs/electricity_2017_predictions_long.csv\", parse_dates=[\"timestamp\"])\n",
+    "\n",
+    "print(\"Actual data:\", df_actual.shape)\n",
+    "print(\"Prediction data:\", df_pred.shape)\n",
+    "\n",
+    "df_pred.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5381fb0e-f908-4c68-b3de-9446c2125598",
+   "metadata": {},
+   "source": [
+    "## 5. Evaluation & Visualization\n",
+    "\n",
+    "Running the evaluation script generates all figures used in the final report:\n",
+    "- Weekly comparison for Oct 21–28  \n",
+    "- RMSE by building type  \n",
+    "- Feature importance  \n",
+    "- Seasonal profiles (all 3 types)  \n",
+    "- Weekly load shapes (all 3 types)  \n",
+    "- Full-year 2017 predicted vs actual  \n",
+    "- Scatter correlation plot (2017)  \n",
+    "\n",
+    "Figures are saved to the `figures/` directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c57535a-be52-4019-b322-c9ca1c9558f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluation.main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62e36470-e625-4bf9-99b2-1e53d35657bc",
+   "metadata": {},
+   "source": [
+    "## 6. Metrics Summary\n",
+    "\n",
+    "This cell loads the computed RMSE, MAE, and MAPE for each building type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca891650-0ad1-4527-a0e3-7fa2ccd11206",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = pd.read_csv(\"figures/metrics_by_building_type.csv\")\n",
+    "metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc5925af-b266-4974-8b0f-de25823f6575",
+   "metadata": {},
+   "source": [
+    "## 7. Display an Example Figure\n",
+    "\n",
+    "Load and display images from the `figures/` directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1375c6fc-153f-4ba5-a4c0-a2aa32e04953",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(\"figures/week_oct21_28_all_types.png\")\n",
+    "Image(\"rmse_by_building_type.png\")\n",
+    "Image(\"feature_importance_logmeter.png\")\n",
+    "Image(\"seasonal_profile_dormitory.png\")\n",
+    "Image(\"seasonal_profile_lab.png\")\n",
+    "Image(\"seasonal_profile_classroom.png\")\n",
+    "Image(\"seasonal_profile_all_types.png\")\n",
+    "Image(\"weekly_shape_dormitory.png\")\n",
+    "Image(\"weekly_shape_lab.png\")\n",
+    "Image(\"weekly_shape_classroom.png\")\n",
+    "Image(\"weekly_shape_all_types.png\")\n",
+    "Image(\"full_year_2017_all_buildings.png\")\n",
+    "Image(\"actual_vs_pred_scatter_2017.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81d01810-4e26-49b3-b98a-facc1fcb4f81",
+   "metadata": {},
+   "source": [
+    "## 8. Conclusion\n",
+    "\n",
+    "This notebook executed the entire pipeline:\n",
+    "\n",
+    "✔ Preprocessed raw dataset  \n",
+    "✔ Trained LightGBM ensemble models  \n",
+    "✔ Generated hourly 2017 predictions  \n",
+    "✔ Computed error metrics by building category  \n",
+    "✔ Generated all figures used in the capstone report  \n",
+    "\n",
+    "The workflow is now fully reproducible to support extension to new datasets or additional building types."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
